src/main/kotlin/com/example/moonjungminbackend/global/error/custom/ErrorProperty.kt
package com.example.moonjungminbackend.global.error.custom

interface ErrorProperty {
    fun status(): Int
    fun message(): String
}